--- a/WebSite1/Contents/_grid.css
+++ b/WebSite1/Contents/_grid.css
@@ -1,14 +1,41 @@
-html, body {
+* { border: 1px solid black; }
+
+html, 
+body {
   height: 100%;
 }
 
 body {
   display: grid;
-  grid-template-columns: 15em auto 15em;
-  grid-template-rows: min-content auto min-content;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: min-content;
+  gap: 1em;
+  margin: 1em;
 }
 
-header, footer {
+header, 
+footer {
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 13;
+}
+ 
+aside {
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+
+nav {
+  grid-column-start: 9;
+  grid-column-end: 13;
+}
+
+main {
+  grid-column-start: 5;
+  grid-column-end: 9;
+}
+
+.cakes {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));  
 }
