--- a/WebSite1/Contents/_grid.css
+++ b/WebSite1/Contents/_grid.css
@@ -16,20 +16,26 @@ body {
 header, 
 footer {
   grid-column-start: 1;
-  grid-column-end: 13;
+  grid-column-end: -1;
 }
  
 aside {
+  grid-row-start: 2;
+  grid-row-end: span 2;
   grid-column-start: 1;
   grid-column-end: 5;
 }
 
-nav {
+nav {  
+  grid-row-start: 2;
+  grid-row-end: span 2;
   grid-column-start: 9;
   grid-column-end: 13;
 }
 
 main {
+  grid-row-start: 2;
+  grid-row-end: span 2;
   grid-column-start: 5;
   grid-column-end: 9;
 }
@@ -38,4 +44,8 @@ main {
   display: grid;
   gap: 1em;
   grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));  
+}
+
+.take2cols {
+  grid-column-end: span 2;
 }
