--- a/WebSite1/Contents/grid.css
+++ b/WebSite1/Contents/grid.css
@@ -1,18 +1,19 @@
-* { border: 1px solid black; }
+* {
+  border: 1px solid black;
+}
 
-html, 
-body {
+html, body {
   height: 100%;
   width: auto;
 }
+
+/* 6 cols layout*/
 
 body {
   border: 1px solid red;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  grid-template-areas: "header header header header header header"
-                       "nav main main main main aside"
-                       "footer footer footer footer footer footer";
+  grid-template-areas: "header header header header header header" "nav main main main main aside" "footer footer footer footer footer footer";
   gap: 0.5em;
   margin: 0.5em;
 }
@@ -22,7 +23,7 @@ header {
   grid-column: header-start / header-end;
 }
 
-footer {  
+footer {
   background-color: aquamarine;
   grid-area: footer;
   grid-column: footer-start / footer-end;
@@ -30,10 +31,10 @@ footer {
 
 aside {
   background-color: rosybrown;
-  grid-column: aside-start / aside-end;  
+  grid-column: aside-start / aside-end;
 }
 
-nav {  
+nav {
   background-color: peru;
   grid-column: nav-start / nav-end;
 }
@@ -43,12 +44,66 @@ main {
   grid-column: main-start / main-end;
 }
 
-.cakes {
-  display: grid;
-  gap: 1em;
-  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));  
+/* 2 cols layout*/
+
+@media screen and (min-width: 475px) and (max-width: 650px) {
+  body {
+    border: 1px solid red;
+    display: grid;
+    grid: auto-flow min-content / 2fr 1fr;
+    grid-template-areas: "header header" "aside  nav" "main main" "footer footer";
+    gap: 0.5em;
+    margin: 0.5em;
+  }
+  header {
+    grid-area: header;
+  }
+  footer {
+    grid-area: footer;
+    background-color: aquamarine;
+  }
+  aside {
+    grid-area: aside;
+    background-color: rosybrown;
+  }
+  nav {
+    grid-area: nav;
+    background-color: peru;
+  }
+  main {
+    grid-area: main;
+    background-color: palevioletred;
+  }
 }
 
-.take2cols {
-  grid-column-end: span 2;
+/* 1 cols layout*/
+
+@media screen and (max-width: 475px) {
+  body {
+    border: 1px solid red;
+    display: grid;
+    grid: auto-flow min-content / 1fr;
+    grid-template-areas: "header" "aside" "nav" "main" "footer";
+    gap: 0.5em;
+    margin: 0.5em;
+  }
+  header {
+    grid-area: header;
+  }
+  footer {
+    grid-area: footer;
+    background-color: aquamarine;
+  }
+  aside {
+    grid-area: aside;
+    background-color: rosybrown;
+  }
+  nav {
+    grid-area: nav;
+    background-color: peru;
+  }
+  main {
+    grid-area: main;
+    background-color: palevioletred;
+  }
 }
